# skeinrs

./: Cargo.toml  README.md  vibe.transcript
AVision/: GestureRecognizer.swift  HandGhostView.swift  Info.plist  LeapSpigotApp.swift  README.md  RibbonView.swift  SpigotEngine.swift  app.rs  ipc.rs  lib.rs  main.rs
LeapSpigotVision/: LeapSpigotVision.entitlements
LeapSpigotVision/LeapSpigotVision/: GestureRecognizer.swift  HandGhostView.swift  Info.plist  LeapSpigotApp.swift  RibbonView.swift  SpigotEngine.swift
LeapSpigotVision/LeapSpigotVision.xcodeproj/: project.pbxproj
LeapSpigotVision/LeapSpigotVision.xcodeproj/project.xcworkspace/xcuserdata/leithaus.xcuserdatad/: UserInterfaceState.xcuserstate
LeapSpigotVision/LeapSpigotVision.xcodeproj/xcuserdata/leithaus.xcuserdatad/xcschemes/: xcschememanagement.plist
LeapSpigotVision/LeapSpigotVisionTests/: LeapSpigotVisionTests.swift
dual_spigot/: Cargo.toml
dual_spigot/src/: demo.rs  lib.rs  lib.rs.err  main.rs
leap_spigot/: Cargo.toml
leap_spigot/src/: app.rs  gesture.rs  lib.rs  main.rs  player.rs  ribbon.rs  visualizer.rs
leap_spigot/src/arxiv/: main.rs
spigot_midi/: Cargo.toml
spigot_midi/src/: demo.rs  lib.rs  main.rs
spigot_stream/: Cargo.toml
spigot_stream/src/: demo.rs  lib.rs  lib.rs.err  lib.rs.err2  main.rs
